Update Stereo-types and Optimize for CDI